synced the fork with latest updates

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -163,3 +163,10 @@ html[data-theme-setting="light"] {
     display: block;
   }
 }
+
+
+.theme-variables {
+  color: var(--global-bg-color);
+  color: var(--global-theme-color);
+  /* Add other variables */
+}
