--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -64,7 +64,9 @@ layout: default
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
       <div id="table-of-contents">
-        {% toc %}
+        {% if site.plugins contains 'jekyll-toc' %}
+          {% toc %}
+        {% endif %}
       </div>
       <hr>
     {% endif %}
