--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -2,7 +2,6 @@
 layout: default
 ---
 {% if page._styles %}
-  <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
   </style>
@@ -10,7 +9,8 @@ layout: default
 
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    {% comment %} Add text-center class to the h1 tag below {% endcomment %}
+    <h1 class="post-title text-center">{{ page.title }}</h1>
     <p class="post-description">{{ page.description }}</p>
   </header>
 
