--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -10,8 +10,7 @@ layout: default
 <div class="post">
   <header class="post-header">
     {% comment %} Add text-center class to the h1 tag below {% endcomment %}
-    <h1 class="post-title text-center">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}</p>
+    <h1 class="post-title text-center" style="font-weight: bold;">{{ page.title }}</h1>
   </header>
 
   <article>
@@ -21,7 +20,7 @@ layout: default
   {% if page.related_publications %}
     <h2>References</h2>
     <div class="publications">
-      {% bibliography --cited_in_order %}
+      {% bibliography -f references --cited_in_order %}
     </div>
   {% endif %}
 
