--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -27,7 +27,7 @@
   defer
   rel="stylesheet"
   type="text/css"
-  href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Crimson+Pro:wght@400;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap"
 >
 
 <!-- Code Syntax Highlighting -->
