--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,3 +20,4 @@ $max-content-width: {{ site.max_width }};
 @import "tabler-icons/tabler-icons.scss";
 @import "tabler-icons/tabler-icons-filled.scss";
 @import "tabler-icons/tabler-icons-outline.scss";
+@import "timeline";
